// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`InfoModalIcon renders correctly with required props 1`] = `
[
  {
    "$$typeof": Symbol(react.test.json),
    "children": [
      {
        "$$typeof": Symbol(react.test.json),
        "children": [
          {
            "$$typeof": Symbol(react.test.json),
            "children": [
              {
                "$$typeof": Symbol(react.test.json),
                "children": [
                  {
                    "$$typeof": Symbol(react.test.json),
                    "children": [
                      {
                        "$$typeof": Symbol(react.test.json),
                        "children": null,
                        "props": {
                          "accessibilityHint": "Closes the modal",
                          "aria-label": "Close modal",
                          "aria-role": "button",
                          "onPress": [Function],
                          "style": {
                            "alignItems": "center",
                            "bottom": -8,
                            "flex": 1,
                            "justifyContent": "center",
                            "left": -8,
                            "position": "absolute",
                            "right": -8,
                            "top": -8,
                          },
                        },
                        "type": "Pressable",
                      },
                    ],
                    "props": {
                      "style": {
                        "alignSelf": "flex-end",
                        "position": "relative",
                      },
                      "testID": undefined,
                    },
                    "type": "View",
                  },
                  {
                    "$$typeof": Symbol(react.test.json),
                    "children": [
                      {
                        "$$typeof": Symbol(react.test.json),
                        "children": [
                          "Info Title",
                        ],
                        "props": {
                          "numberOfLines": 0,
                          "style": {
                            "color": "#1C1C1C",
                            "fontFamily": "heading-bold",
                            "fontSize": 20,
                          },
                          "testID": undefined,
                        },
                        "type": "Text",
                      },
                    ],
                    "props": {
                      "accessibilityHint": "Modal title",
                      "aria-label": "Info Title",
                      "aria-role": "header",
                      "style": {
                        "alignSelf": "flex-start",
                      },
                      "testID": undefined,
                    },
                    "type": "View",
                  },
                  {
                    "$$typeof": Symbol(react.test.json),
                    "children": [
                      {
                        "$$typeof": Symbol(react.test.json),
                        "children": [
                          {
                            "$$typeof": Symbol(react.test.json),
                            "children": [
                              "This is information text",
                            ],
                            "props": {
                              "numberOfLines": 0,
                              "selectable": undefined,
                              "style": {
                                "color": "#1C1C1C",
                                "fontFamily": "text-regular",
                                "fontSize": 14,
                                "textAlign": "left",
                              },
                              "testID": undefined,
                            },
                            "type": "Text",
                          },
                        ],
                        "props": {},
                        "type": "View",
                      },
                    ],
                    "props": {
                      "accessibilityHint": "Modal body text",
                      "aria-label": "This is information text",
                      "aria-role": "text",
                      "style": {
                        "alignSelf": "flex-start",
                        "marginVertical": 12,
                      },
                      "testID": undefined,
                    },
                    "type": "View",
                  },
                  {
                    "$$typeof": Symbol(react.test.json),
                    "children": [
                      {
                        "$$typeof": Symbol(react.test.json),
                        "children": [
                          {
                            "$$typeof": Symbol(react.test.json),
                            "children": [
                              {
                                "$$typeof": Symbol(react.test.json),
                                "children": [
                                  {
                                    "$$typeof": Symbol(react.test.json),
                                    "children": [
                                      "Close",
                                    ],
                                    "props": {
                                      "style": {
                                        "color": "#FFFFFF",
                                        "fontSize": 16,
                                        "fontWeight": "700",
                                      },
                                    },
                                    "type": "Text",
                                  },
                                ],
                                "props": {
                                  "style": {
                                    "flexDirection": "row",
                                  },
                                  "testID": undefined,
                                },
                                "type": "View",
                              },
                            ],
                            "props": {
                              "style": {
                                "flexDirection": "row",
                              },
                              "testID": undefined,
                            },
                            "type": "View",
                          },
                        ],
                        "props": {
                          "accessibilityHint": "Press to perform action",
                          "aria-label": "Close",
                          "aria-role": "button",
                          "disabled": undefined,
                          "onPress": [Function: debounced],
                          "style": {
                            "alignItems": "center",
                            "alignSelf": "flex-start",
                            "backgroundColor": "#0E9DCD",
                            "borderColor": undefined,
                            "borderRadius": 360,
                            "borderWidth": undefined,
                            "flexDirection": "column",
                            "justifyContent": "center",
                            "paddingHorizontal": 20,
                            "paddingVertical": 8,
                            "width": "auto",
                          },
                          "testID": undefined,
                        },
                        "type": "Pressable",
                      },
                    ],
                    "props": {
                      "style": {
                        "alignSelf": "flex-end",
                        "flexDirection": "row",
                        "marginTop": 20,
                      },
                      "testID": undefined,
                    },
                    "type": "View",
                  },
                ],
                "props": {
                  "style": {
                    "alignItems": "center",
                    "alignSelf": "center",
                    "backgroundColor": "#FFFFFF",
                    "borderRadius": 4,
                    "boxShadow": "0px 4px 24px rgba(0, 0, 0, 0.5)",
                    "elevation": 24,
                    "margin": "auto",
                    "maxHeight": "100%",
                    "padding": 32,
                    "width": "90%",
                    "zIndex": 1,
                  },
                  "testID": undefined,
                },
                "type": "View",
              },
            ],
            "props": {
              "onPress": [Function],
              "style": {
                "cursor": "auto",
              },
            },
            "type": "Pressable",
          },
        ],
        "props": {
          "onPress": [Function],
          "style": {
            "alignItems": "center",
            "backgroundColor": "rgba(0, 0, 0, 0.5)",
            "flex": 1,
            "justifyContent": "center",
          },
        },
        "type": "Pressable",
      },
    ],
    "props": {
      "animationType": "none",
      "onRequestClose": [Function],
      "transparent": true,
      "visible": false,
    },
    "type": "Modal",
  },
  {
    "$$typeof": Symbol(react.test.json),
    "children": [
      {
        "$$typeof": Symbol(react.test.json),
        "children": [
          "ⓘ",
        ],
        "props": {
          "numberOfLines": 0,
          "style": {
            "color": "#686868",
            "fontFamily": "heading-semibold",
            "fontSize": 14,
          },
          "testID": undefined,
        },
        "type": "Text",
      },
    ],
    "props": {
      "aria-role": "button",
      "hitSlop": {
        "bottom": 10,
        "left": 10,
        "right": 10,
        "top": 10,
      },
      "onPress": [Function],
      "style": {
        "marginLeft": 8,
      },
      "testID": "info-icon",
    },
    "type": "Pressable",
  },
]
`;

exports[`InfoModalIcon renders with subtitle 1`] = `
[
  {
    "$$typeof": Symbol(react.test.json),
    "children": [
      {
        "$$typeof": Symbol(react.test.json),
        "children": [
          {
            "$$typeof": Symbol(react.test.json),
            "children": [
              {
                "$$typeof": Symbol(react.test.json),
                "children": [
                  {
                    "$$typeof": Symbol(react.test.json),
                    "children": [
                      {
                        "$$typeof": Symbol(react.test.json),
                        "children": null,
                        "props": {
                          "accessibilityHint": "Closes the modal",
                          "aria-label": "Close modal",
                          "aria-role": "button",
                          "onPress": [Function],
                          "style": {
                            "alignItems": "center",
                            "bottom": -8,
                            "flex": 1,
                            "justifyContent": "center",
                            "left": -8,
                            "position": "absolute",
                            "right": -8,
                            "top": -8,
                          },
                        },
                        "type": "Pressable",
                      },
                    ],
                    "props": {
                      "style": {
                        "alignSelf": "flex-end",
                        "position": "relative",
                      },
                      "testID": undefined,
                    },
                    "type": "View",
                  },
                  {
                    "$$typeof": Symbol(react.test.json),
                    "children": [
                      {
                        "$$typeof": Symbol(react.test.json),
                        "children": [
                          "Title",
                        ],
                        "props": {
                          "numberOfLines": 0,
                          "style": {
                            "color": "#1C1C1C",
                            "fontFamily": "heading-bold",
                            "fontSize": 20,
                          },
                          "testID": undefined,
                        },
                        "type": "Text",
                      },
                    ],
                    "props": {
                      "accessibilityHint": "Modal title",
                      "aria-label": "Title",
                      "aria-role": "header",
                      "style": {
                        "alignSelf": "flex-start",
                      },
                      "testID": undefined,
                    },
                    "type": "View",
                  },
                  {
                    "$$typeof": Symbol(react.test.json),
                    "children": [
                      {
                        "$$typeof": Symbol(react.test.json),
                        "children": [
                          {
                            "$$typeof": Symbol(react.test.json),
                            "children": [
                              "Subtitle text",
                            ],
                            "props": {
                              "numberOfLines": 0,
                              "selectable": undefined,
                              "style": {
                                "color": "#1C1C1C",
                                "fontFamily": "text-medium",
                                "fontSize": 16,
                                "textAlign": "left",
                              },
                              "testID": undefined,
                            },
                            "type": "Text",
                          },
                        ],
                        "props": {},
                        "type": "View",
                      },
                    ],
                    "props": {
                      "accessibilityHint": "Modal Sub Heading Text",
                      "aria-label": "Subtitle text",
                      "aria-role": "text",
                      "style": {
                        "alignSelf": "flex-start",
                        "marginTop": 8,
                      },
                      "testID": undefined,
                    },
                    "type": "View",
                  },
                  {
                    "$$typeof": Symbol(react.test.json),
                    "children": [
                      {
                        "$$typeof": Symbol(react.test.json),
                        "children": [
                          {
                            "$$typeof": Symbol(react.test.json),
                            "children": [
                              "Main text content",
                            ],
                            "props": {
                              "numberOfLines": 0,
                              "selectable": undefined,
                              "style": {
                                "color": "#1C1C1C",
                                "fontFamily": "text-regular",
                                "fontSize": 14,
                                "textAlign": "left",
                              },
                              "testID": undefined,
                            },
                            "type": "Text",
                          },
                        ],
                        "props": {},
                        "type": "View",
                      },
                    ],
                    "props": {
                      "accessibilityHint": "Modal body text",
                      "aria-label": "Main text content",
                      "aria-role": "text",
                      "style": {
                        "alignSelf": "flex-start",
                        "marginVertical": 12,
                      },
                      "testID": undefined,
                    },
                    "type": "View",
                  },
                  {
                    "$$typeof": Symbol(react.test.json),
                    "children": [
                      {
                        "$$typeof": Symbol(react.test.json),
                        "children": [
                          {
                            "$$typeof": Symbol(react.test.json),
                            "children": [
                              {
                                "$$typeof": Symbol(react.test.json),
                                "children": [
                                  {
                                    "$$typeof": Symbol(react.test.json),
                                    "children": [
                                      "Close",
                                    ],
                                    "props": {
                                      "style": {
                                        "color": "#FFFFFF",
                                        "fontSize": 16,
                                        "fontWeight": "700",
                                      },
                                    },
                                    "type": "Text",
                                  },
                                ],
                                "props": {
                                  "style": {
                                    "flexDirection": "row",
                                  },
                                  "testID": undefined,
                                },
                                "type": "View",
                              },
                            ],
                            "props": {
                              "style": {
                                "flexDirection": "row",
                              },
                              "testID": undefined,
                            },
                            "type": "View",
                          },
                        ],
                        "props": {
                          "accessibilityHint": "Press to perform action",
                          "aria-label": "Close",
                          "aria-role": "button",
                          "disabled": undefined,
                          "onPress": [Function: debounced],
                          "style": {
                            "alignItems": "center",
                            "alignSelf": "flex-start",
                            "backgroundColor": "#0E9DCD",
                            "borderColor": undefined,
                            "borderRadius": 360,
                            "borderWidth": undefined,
                            "flexDirection": "column",
                            "justifyContent": "center",
                            "paddingHorizontal": 20,
                            "paddingVertical": 8,
                            "width": "auto",
                          },
                          "testID": undefined,
                        },
                        "type": "Pressable",
                      },
                    ],
                    "props": {
                      "style": {
                        "alignSelf": "flex-end",
                        "flexDirection": "row",
                        "marginTop": 20,
                      },
                      "testID": undefined,
                    },
                    "type": "View",
                  },
                ],
                "props": {
                  "style": {
                    "alignItems": "center",
                    "alignSelf": "center",
                    "backgroundColor": "#FFFFFF",
                    "borderRadius": 4,
                    "boxShadow": "0px 4px 24px rgba(0, 0, 0, 0.5)",
                    "elevation": 24,
                    "margin": "auto",
                    "maxHeight": "100%",
                    "padding": 32,
                    "width": "90%",
                    "zIndex": 1,
                  },
                  "testID": undefined,
                },
                "type": "View",
              },
            ],
            "props": {
              "onPress": [Function],
              "style": {
                "cursor": "auto",
              },
            },
            "type": "Pressable",
          },
        ],
        "props": {
          "onPress": [Function],
          "style": {
            "alignItems": "center",
            "backgroundColor": "rgba(0, 0, 0, 0.5)",
            "flex": 1,
            "justifyContent": "center",
          },
        },
        "type": "Pressable",
      },
    ],
    "props": {
      "animationType": "none",
      "onRequestClose": [Function],
      "transparent": true,
      "visible": false,
    },
    "type": "Modal",
  },
  {
    "$$typeof": Symbol(react.test.json),
    "children": [
      {
        "$$typeof": Symbol(react.test.json),
        "children": [
          "ⓘ",
        ],
        "props": {
          "numberOfLines": 0,
          "style": {
            "color": "#686868",
            "fontFamily": "heading-semibold",
            "fontSize": 14,
          },
          "testID": undefined,
        },
        "type": "Text",
      },
    ],
    "props": {
      "aria-role": "button",
      "hitSlop": {
        "bottom": 10,
        "left": 10,
        "right": 10,
        "top": 10,
      },
      "onPress": [Function],
      "style": {
        "marginLeft": 8,
      },
      "testID": "info-icon",
    },
    "type": "Pressable",
  },
]
`;

exports[`InfoModalIcon renders with children content 1`] = `
[
  {
    "$$typeof": Symbol(react.test.json),
    "children": [
      {
        "$$typeof": Symbol(react.test.json),
        "children": [
          {
            "$$typeof": Symbol(react.test.json),
            "children": [
              {
                "$$typeof": Symbol(react.test.json),
                "children": [
                  {
                    "$$typeof": Symbol(react.test.json),
                    "children": [
                      {
                        "$$typeof": Symbol(react.test.json),
                        "children": null,
                        "props": {
                          "accessibilityHint": "Closes the modal",
                          "aria-label": "Close modal",
                          "aria-role": "button",
                          "onPress": [Function],
                          "style": {
                            "alignItems": "center",
                            "bottom": -8,
                            "flex": 1,
                            "justifyContent": "center",
                            "left": -8,
                            "position": "absolute",
                            "right": -8,
                            "top": -8,
                          },
                        },
                        "type": "Pressable",
                      },
                    ],
                    "props": {
                      "style": {
                        "alignSelf": "flex-end",
                        "position": "relative",
                      },
                      "testID": undefined,
                    },
                    "type": "View",
                  },
                  {
                    "$$typeof": Symbol(react.test.json),
                    "children": [
                      {
                        "$$typeof": Symbol(react.test.json),
                        "children": [
                          "Title",
                        ],
                        "props": {
                          "numberOfLines": 0,
                          "style": {
                            "color": "#1C1C1C",
                            "fontFamily": "heading-bold",
                            "fontSize": 20,
                          },
                          "testID": undefined,
                        },
                        "type": "Text",
                      },
                    ],
                    "props": {
                      "accessibilityHint": "Modal title",
                      "aria-label": "Title",
                      "aria-role": "header",
                      "style": {
                        "alignSelf": "flex-start",
                      },
                      "testID": undefined,
                    },
                    "type": "View",
                  },
                  {
                    "$$typeof": Symbol(react.test.json),
                    "children": [
                      {
                        "$$typeof": Symbol(react.test.json),
                        "children": [
                          {
                            "$$typeof": Symbol(react.test.json),
                            "children": [
                              "Text content",
                            ],
                            "props": {
                              "numberOfLines": 0,
                              "selectable": undefined,
                              "style": {
                                "color": "#1C1C1C",
                                "fontFamily": "text-regular",
                                "fontSize": 14,
                                "textAlign": "left",
                              },
                              "testID": undefined,
                            },
                            "type": "Text",
                          },
                        ],
                        "props": {},
                        "type": "View",
                      },
                    ],
                    "props": {
                      "accessibilityHint": "Modal body text",
                      "aria-label": "Text content",
                      "aria-role": "text",
                      "style": {
                        "alignSelf": "flex-start",
                        "marginVertical": 12,
                      },
                      "testID": undefined,
                    },
                    "type": "View",
                  },
                  {
                    "$$typeof": Symbol(react.test.json),
                    "children": [
                      {
                        "$$typeof": Symbol(react.test.json),
                        "children": [
                          {
                            "$$typeof": Symbol(react.test.json),
                            "children": [
                              "Custom children content",
                            ],
                            "props": {
                              "numberOfLines": 0,
                              "selectable": undefined,
                              "style": {
                                "color": "#1C1C1C",
                                "fontFamily": "text-regular",
                                "fontSize": 14,
                                "textAlign": "left",
                              },
                              "testID": undefined,
                            },
                            "type": "Text",
                          },
                        ],
                        "props": {},
                        "type": "View",
                      },
                    ],
                    "props": {
                      "style": {
                        "flex": 1,
                        "marginTop": 0,
                        "width": "100%",
                      },
                      "testID": undefined,
                    },
                    "type": "View",
                  },
                  {
                    "$$typeof": Symbol(react.test.json),
                    "children": [
                      {
                        "$$typeof": Symbol(react.test.json),
                        "children": [
                          {
                            "$$typeof": Symbol(react.test.json),
                            "children": [
                              {
                                "$$typeof": Symbol(react.test.json),
                                "children": [
                                  {
                                    "$$typeof": Symbol(react.test.json),
                                    "children": [
                                      "Close",
                                    ],
                                    "props": {
                                      "style": {
                                        "color": "#FFFFFF",
                                        "fontSize": 16,
                                        "fontWeight": "700",
                                      },
                                    },
                                    "type": "Text",
                                  },
                                ],
                                "props": {
                                  "style": {
                                    "flexDirection": "row",
                                  },
                                  "testID": undefined,
                                },
                                "type": "View",
                              },
                            ],
                            "props": {
                              "style": {
                                "flexDirection": "row",
                              },
                              "testID": undefined,
                            },
                            "type": "View",
                          },
                        ],
                        "props": {
                          "accessibilityHint": "Press to perform action",
                          "aria-label": "Close",
                          "aria-role": "button",
                          "disabled": undefined,
                          "onPress": [Function: debounced],
                          "style": {
                            "alignItems": "center",
                            "alignSelf": "flex-start",
                            "backgroundColor": "#0E9DCD",
                            "borderColor": undefined,
                            "borderRadius": 360,
                            "borderWidth": undefined,
                            "flexDirection": "column",
                            "justifyContent": "center",
                            "paddingHorizontal": 20,
                            "paddingVertical": 8,
                            "width": "auto",
                          },
                          "testID": undefined,
                        },
                        "type": "Pressable",
                      },
                    ],
                    "props": {
                      "style": {
                        "alignSelf": "flex-end",
                        "flexDirection": "row",
                        "marginTop": 32,
                      },
                      "testID": undefined,
                    },
                    "type": "View",
                  },
                ],
                "props": {
                  "style": {
                    "alignItems": "center",
                    "alignSelf": "center",
                    "backgroundColor": "#FFFFFF",
                    "borderRadius": 4,
                    "boxShadow": "0px 4px 24px rgba(0, 0, 0, 0.5)",
                    "elevation": 24,
                    "margin": "auto",
                    "maxHeight": "100%",
                    "padding": 32,
                    "width": "90%",
                    "zIndex": 1,
                  },
                  "testID": undefined,
                },
                "type": "View",
              },
            ],
            "props": {
              "onPress": [Function],
              "style": {
                "cursor": "auto",
              },
            },
            "type": "Pressable",
          },
        ],
        "props": {
          "onPress": [Function],
          "style": {
            "alignItems": "center",
            "backgroundColor": "rgba(0, 0, 0, 0.5)",
            "flex": 1,
            "justifyContent": "center",
          },
        },
        "type": "Pressable",
      },
    ],
    "props": {
      "animationType": "none",
      "onRequestClose": [Function],
      "transparent": true,
      "visible": false,
    },
    "type": "Modal",
  },
  {
    "$$typeof": Symbol(react.test.json),
    "children": [
      {
        "$$typeof": Symbol(react.test.json),
        "children": [
          "ⓘ",
        ],
        "props": {
          "numberOfLines": 0,
          "style": {
            "color": "#686868",
            "fontFamily": "heading-semibold",
            "fontSize": 14,
          },
          "testID": undefined,
        },
        "type": "Text",
      },
    ],
    "props": {
      "aria-role": "button",
      "hitSlop": {
        "bottom": 10,
        "left": 10,
        "right": 10,
        "top": 10,
      },
      "onPress": [Function],
      "style": {
        "marginLeft": 8,
      },
      "testID": "info-icon",
    },
    "type": "Pressable",
  },
]
`;

exports[`InfoModalIcon opens modal when pressed 1`] = `
[
  {
    "$$typeof": Symbol(react.test.json),
    "children": [
      {
        "$$typeof": Symbol(react.test.json),
        "children": [
          {
            "$$typeof": Symbol(react.test.json),
            "children": [
              {
                "$$typeof": Symbol(react.test.json),
                "children": [
                  {
                    "$$typeof": Symbol(react.test.json),
                    "children": [
                      {
                        "$$typeof": Symbol(react.test.json),
                        "children": null,
                        "props": {
                          "accessibilityHint": "Closes the modal",
                          "aria-label": "Close modal",
                          "aria-role": "button",
                          "onPress": [Function],
                          "style": {
                            "alignItems": "center",
                            "bottom": -8,
                            "flex": 1,
                            "justifyContent": "center",
                            "left": -8,
                            "position": "absolute",
                            "right": -8,
                            "top": -8,
                          },
                        },
                        "type": "Pressable",
                      },
                    ],
                    "props": {
                      "style": {
                        "alignSelf": "flex-end",
                        "position": "relative",
                      },
                      "testID": undefined,
                    },
                    "type": "View",
                  },
                  {
                    "$$typeof": Symbol(react.test.json),
                    "children": [
                      {
                        "$$typeof": Symbol(react.test.json),
                        "children": [
                          "Modal Title",
                        ],
                        "props": {
                          "numberOfLines": 0,
                          "style": {
                            "color": "#1C1C1C",
                            "fontFamily": "heading-bold",
                            "fontSize": 20,
                          },
                          "testID": undefined,
                        },
                        "type": "Text",
                      },
                    ],
                    "props": {
                      "accessibilityHint": "Modal title",
                      "aria-label": "Modal Title",
                      "aria-role": "header",
                      "style": {
                        "alignSelf": "flex-start",
                      },
                      "testID": undefined,
                    },
                    "type": "View",
                  },
                  {
                    "$$typeof": Symbol(react.test.json),
                    "children": [
                      {
                        "$$typeof": Symbol(react.test.json),
                        "children": [
                          {
                            "$$typeof": Symbol(react.test.json),
                            "children": [
                              "Modal text",
                            ],
                            "props": {
                              "numberOfLines": 0,
                              "selectable": undefined,
                              "style": {
                                "color": "#1C1C1C",
                                "fontFamily": "text-regular",
                                "fontSize": 14,
                                "textAlign": "left",
                              },
                              "testID": undefined,
                            },
                            "type": "Text",
                          },
                        ],
                        "props": {},
                        "type": "View",
                      },
                    ],
                    "props": {
                      "accessibilityHint": "Modal body text",
                      "aria-label": "Modal text",
                      "aria-role": "text",
                      "style": {
                        "alignSelf": "flex-start",
                        "marginVertical": 12,
                      },
                      "testID": undefined,
                    },
                    "type": "View",
                  },
                  {
                    "$$typeof": Symbol(react.test.json),
                    "children": [
                      {
                        "$$typeof": Symbol(react.test.json),
                        "children": [
                          {
                            "$$typeof": Symbol(react.test.json),
                            "children": [
                              {
                                "$$typeof": Symbol(react.test.json),
                                "children": [
                                  {
                                    "$$typeof": Symbol(react.test.json),
                                    "children": [
                                      "Close",
                                    ],
                                    "props": {
                                      "style": {
                                        "color": "#FFFFFF",
                                        "fontSize": 16,
                                        "fontWeight": "700",
                                      },
                                    },
                                    "type": "Text",
                                  },
                                ],
                                "props": {
                                  "style": {
                                    "flexDirection": "row",
                                  },
                                  "testID": undefined,
                                },
                                "type": "View",
                              },
                            ],
                            "props": {
                              "style": {
                                "flexDirection": "row",
                              },
                              "testID": undefined,
                            },
                            "type": "View",
                          },
                        ],
                        "props": {
                          "accessibilityHint": "Press to perform action",
                          "aria-label": "Close",
                          "aria-role": "button",
                          "disabled": undefined,
                          "onPress": [Function: debounced],
                          "style": {
                            "alignItems": "center",
                            "alignSelf": "flex-start",
                            "backgroundColor": "#0E9DCD",
                            "borderColor": undefined,
                            "borderRadius": 360,
                            "borderWidth": undefined,
                            "flexDirection": "column",
                            "justifyContent": "center",
                            "paddingHorizontal": 20,
                            "paddingVertical": 8,
                            "width": "auto",
                          },
                          "testID": undefined,
                        },
                        "type": "Pressable",
                      },
                    ],
                    "props": {
                      "style": {
                        "alignSelf": "flex-end",
                        "flexDirection": "row",
                        "marginTop": 20,
                      },
                      "testID": undefined,
                    },
                    "type": "View",
                  },
                ],
                "props": {
                  "style": {
                    "alignItems": "center",
                    "alignSelf": "center",
                    "backgroundColor": "#FFFFFF",
                    "borderRadius": 4,
                    "boxShadow": "0px 4px 24px rgba(0, 0, 0, 0.5)",
                    "elevation": 24,
                    "margin": "auto",
                    "maxHeight": "100%",
                    "padding": 32,
                    "width": "90%",
                    "zIndex": 1,
                  },
                  "testID": undefined,
                },
                "type": "View",
              },
            ],
            "props": {
              "onPress": [Function],
              "style": {
                "cursor": "auto",
              },
            },
            "type": "Pressable",
          },
        ],
        "props": {
          "onPress": [Function],
          "style": {
            "alignItems": "center",
            "backgroundColor": "rgba(0, 0, 0, 0.5)",
            "flex": 1,
            "justifyContent": "center",
          },
        },
        "type": "Pressable",
      },
    ],
    "props": {
      "animationType": "none",
      "onRequestClose": [Function],
      "transparent": true,
      "visible": true,
    },
    "type": "Modal",
  },
  {
    "$$typeof": Symbol(react.test.json),
    "children": [
      {
        "$$typeof": Symbol(react.test.json),
        "children": [
          "ⓘ",
        ],
        "props": {
          "numberOfLines": 0,
          "style": {
            "color": "#686868",
            "fontFamily": "heading-semibold",
            "fontSize": 14,
          },
          "testID": undefined,
        },
        "type": "Text",
      },
    ],
    "props": {
      "aria-role": "button",
      "hitSlop": {
        "bottom": 10,
        "left": 10,
        "right": 10,
        "top": 10,
      },
      "onPress": [Function],
      "style": {
        "marginLeft": 8,
      },
      "testID": "info-icon",
    },
    "type": "Pressable",
  },
]
`;
